maps link, button contact us

--- a/iproc-2-go.html
+++ b/iproc-2-go.html
@@ -49,7 +49,7 @@
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl w-full">
             <div class="p-2 mr-5">
                 <a href="index.html" class="">
-                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc">
+                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc" width="90" height="33">
                 </a>
             </div>
 
@@ -94,7 +94,7 @@
                     <button type="button"
                         class=" hidden bg-primary md:block text-white hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-8 py-2 text-center cursor-pointer">Contact
                         Us</button>
-
+                    <span class="sr-only">Contact Us Button</span>
                 </a>
 
                 <!-- Hamburger Button for Mobile -->
@@ -428,7 +428,7 @@
                                 d="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
                                 clip-rule="evenodd" />
                         </svg>
-                        <a>
+                        <a class="https://maps.app.goo.gl/xUBGTUkkSuJDT7fb8">
                             District 8 – Treasury Tower. SCBD Lot 28,11th floor, Unit 11-K, Jl. Jend Sudirman Kav 52 –
                             54,
                             Jakarta 12190, INDONESIA</a>
