--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -47,7 +47,7 @@
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl w-full">
             <div class="p-2 mr-5">
                 <a href="index.html">
-                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc">
+                    <img loading="lazy" src="lib/img/Iproc.png" alt="iProc" width="90" height="33">
                 </a>
             </div>
 
@@ -92,7 +92,7 @@
                     <button type="button"
                         class=" hidden bg-primary md:block text-white hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-8 py-2 text-center cursor-pointer">Contact
                         Us</button>
-
+                    <span class="sr-only">Contact Us Button</span>
                 </a>
 
                 <!-- Hamburger Button for Mobile -->
@@ -181,7 +181,8 @@
                     </div>
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800"
                         data-aos-delay="100">
-                        <img loading="lazy" src="lib/img/iproc cloud/logo solve 2.svg" class="mb-5" alt="Implementasi Rumit" />
+                        <img loading="lazy" src="lib/img/iproc cloud/logo solve 2.svg" class="mb-5"
+                            alt="Implementasi Rumit" />
                         <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
                             <!-- Is the system implementation complicated and time-consuming? -->
@@ -189,7 +190,8 @@
                     </div>
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800"
                         data-aos-delay="200">
-                        <img loading="lazy" src="lib/img/iproc cloud/logo solve 3.svg" class="mb-5" alt="Akses Terbatas" />
+                        <img loading="lazy" src="lib/img/iproc cloud/logo solve 3.svg" class="mb-5"
+                            alt="Akses Terbatas" />
                         <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Akses terbatas hanya di jaringan internal, tidak fleksibel
                             untuk tim yang bekerja dari berbagai lokasi?
@@ -199,7 +201,8 @@
                     </div>
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800"
                         data-aos-delay="300">
-                        <img loading="lazy" src="lib/img/iproc cloud/logo solve 4.svg" class="mb-5" alt="Implementasi Lama" />
+                        <img loading="lazy" src="lib/img/iproc cloud/logo solve 4.svg" class="mb-5"
+                            alt="Implementasi Lama" />
                         <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
                             <!-- Is the system implementation complex and time-consuming? -->
@@ -225,8 +228,9 @@
                         now here with the latest innovation to <br /> take your procurement process to the next level. -->
                     </p>
                 </div>
-                <img loading="lazy" src="./lib/img/iproc cloud/desktop-illustration.png" class="w-4/5 sm:w-1/2 relative -bottom-10"
-                    alt="Desktop Illustration" data-aos="fade-up" data-aos-duration="800">
+                <img loading="lazy" src="./lib/img/iproc cloud/desktop-illustration.png"
+                    class="w-4/5 sm:w-1/2 relative -bottom-10" alt="Desktop Illustration" data-aos="fade-up"
+                    data-aos-duration="800">
             </div>
         </section>
         <section class="why-iproc py-20">
@@ -327,8 +331,8 @@
                 <div class="grid md:grid-cols-2 gap-10">
                     <div>
                         <div class="bg-[#48ACE1] rounded-2xl p-4 overflow-hidden">
-                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-1.png" data-aos="zoom-in-up" data-aos-duration="800"
-                                class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
+                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-1.png" data-aos="zoom-in-up"
+                                data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
                             <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">Vendor Registration &
@@ -341,8 +345,8 @@
                     </div>
                     <div>
                         <div class="bg-[#FFBC50] rounded-2xl p-4 overflow-hidden">
-                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-2.png" data-aos="zoom-in-up" data-aos-duration="800"
-                                class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
+                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-2.png" data-aos="zoom-in-up"
+                                data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
                             <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">Publikasi Pengumuman Lelang /
@@ -354,8 +358,8 @@
                     </div>
                     <div>
                         <div class="bg-[#FFBC50] rounded-2xl p-4 overflow-hidden">
-                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-3.png" data-aos="zoom-in-up" data-aos-duration="800"
-                                class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
+                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-3.png" data-aos="zoom-in-up"
+                                data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
                             <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">Market Survey/RFI</h3>
@@ -367,8 +371,8 @@
                     </div>
                     <div>
                         <div class="bg-[#48ACE1] rounded-2xl p-4 overflow-hidden">
-                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-4.png" data-aos="zoom-in-up" data-aos-duration="800"
-                                class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
+                            <img loading="lazy" src="./lib/img/iproc cloud/fitur-4.png" data-aos="zoom-in-up"
+                                data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
                             <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">eBidding</h3>
@@ -383,7 +387,8 @@
         </section>
         <section id="perbandingan" class="hidden-iproc py-24">
             <div class="max-w-screen-2xl mx-auto px-8 sm:px-6 lg:px-8">
-                <img loading="lazy" src="./lib/img/Iproc cloud.svg" class="w-48 sm:w-72 mb-12 mx-auto" alt="Logo iproc cloud">
+                <img loading="lazy" src="./lib/img/Iproc cloud.svg" class="w-48 sm:w-72 mb-12 mx-auto"
+                    alt="Logo iproc cloud">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 text-center sm:text-left">
                     Perbedaan iProc VMS, iProc e-Bidding dan iProc Private Cloud
                 </h2>
@@ -670,12 +675,13 @@
         <div class="max-w-screen-2xl mx-auto p-2">
             <div class="w-full grid grid-cols-12 gap-5 sm:gap-10!">
                 <div class="col-span-12 sm:col-span-6 lg:col-span-4!">
-                    <img loading="lazy" loading="lazy" src="./lib/img/iproc-white.svg" class="w-30 mb-5" alt="iProc Logo">
+                    <img loading="lazy" loading="lazy" src="./lib/img/iproc-white.svg" class="w-30 mb-5"
+                        alt="iProc Logo">
                     <p class="text-sm sm:text-base! mb-5">Kapan saja dan di mana saja, akses beberapa fitur iProc kini
                         semakin mudah dengan iProc 2GO, aplikasi iProc di mobile phone Anda.</p>
                     <h3 class="text-base sm:text-lg font-bold mb-5">Certified & Registered</h3>
-                    <img loading="lazy" loading="lazy" src="./lib/img/iproc-2-go/certified-registered.png" class="w-full"
-                        alt="Certified Registered">
+                    <img loading="lazy" loading="lazy" src="./lib/img/iproc-2-go/certified-registered.png"
+                        class="w-full" alt="Certified Registered">
                 </div>
                 <div class="col-span-12 sm:col-span-6 lg:col-span-4!">
                     <h3 class="text-base sm:text-lg font-bold mb-5">REACH US</h3>
@@ -686,7 +692,7 @@
                                 d="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
                                 clip-rule="evenodd" />
                         </svg>
-                        <a>
+                        <a href="https://maps.app.goo.gl/xUBGTUkkSuJDT7fb8">
                             District 8 – Treasury Tower. SCBD Lot 28,11th floor, Unit 11-K, Jl. Jend Sudirman Kav 52 –
                             54,
                             Jakarta 12190, INDONESIA</a>
