--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <button type="button"
                         class=" hidden bg-primary md:block text-white hover:shadow-inner focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-8 py-2 text-center cursor-pointer">Contact
                         Us</button>
-
+                    <span class="sr-only">Contact Us Button</span>
                 </a>
 
                 <!-- Hamburger Button for Mobile -->
