--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -78,7 +78,7 @@
 <body data-spy="scroll" data-target="#navbar" data-offset="0" data-new-gr-c-s-check-loaded="14.1211.0"
     data-gr-ext-installed="" cz-shortcut-listen="true">
     <nav id="navbar" class="px-8 p-6 lg:px-6 py-2.5 fixed top-0 left-0 w-full z-50 bg-transparent">
-        <div class="flex flex-wrap justify-around items-center mx-auto max-w-screen-2xl w-full">
+        <div class="flex flex-wrap justify-end lg:justify-around items-center mx-auto max-w-screen-2xl w-full">
             <div class="flex items-center space-x-4 lg:space-x-6 lg:order-2 ml-0 lg:ml-4!">
                 <!-- Language Dropdown with Flags -->
                 <!-- <div class="relative inline-block text-left">
@@ -184,7 +184,7 @@
                         level with a flexible, secure, and cost-effective cloud-based system. -->
                     </p>
                 </div>
-                <div class="cloud-content relative -bottom-30 -mx-8 overflow-x-clip overflow-y-visible">
+                <div class="cloud-content relative -bottom-30 -mx-4 overflow-x-clip overflow-y-visible">
                     <img src="../lib/img/iproc cloud/hero-illustration.png" alt="Cloud System Illustration"
                         class="w-11/12 scale-150 sm:scale-150 md:scale-100 mx-auto" data-aos="zoom-in-down"
                         data-aos-duration="800" />
@@ -200,42 +200,42 @@
                     e-Procurement, namun...
                     <!-- Your organization has already adopted <br> e-Procurement, but... -->
                 </h2>
-                <div class="grid grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-8 -ml-8">
-                    <div class="flex flex-col items-center px-8 border-r-2 border-sky-200" data-aos="fade-up"
+                <div class="grid grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-6 -ml-6 lg:-mr-12 lg:-ml-12">
+                    <div class="flex flex-col items-center px-6 lg:px-12 border-r-2 border-sky-200" data-aos="fade-up"
                         data-aos-duration="800">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-1.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Biaya Besar" />
-                        <p class="text-gray-800 font-semibold text-center lg:text-left text-sm sm:text-xl">
+                        <p class="text-gray-800 font-semibold text-left text-sm sm:text-xl">
                             Masih membutuhkan biaya besar untuk infrastruktur dan
                             pemeliharaan sistem?
                             <!-- Still requires significant costs for infrastructure and system maintenance? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-8 border-r-0 border-sky-200 lg:border-r-2"
+                    <div class="flex flex-col items-center px-6 lg:px-12 border-r-0 border-sky-200 lg:border-r-2"
                         data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-2.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Implementasi Rumit" />
-                        <p class="text-gray-800 font-semibold text-center lg:text-left text-sm sm:text-xl">
+                        <p class="text-gray-800 font-semibold text-left text-sm sm:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
                             <!-- Is the system implementation complicated and time-consuming? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-8 border-r-2 border-sky-200" data-aos="fade-up"
+                    <div class="flex flex-col items-center px-6 lg:px-12 border-r-2 border-sky-200" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="200">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-3.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Akses Terbatas" />
-                        <p class="text-gray-800 font-semibold text-center lg:text-left text-sm sm:text-xl">
+                        <p class="text-gray-800 font-semibold text-left text-sm sm:text-xl">
                             Akses terbatas hanya di jaringan internal, tidak fleksibel
                             untuk tim yang bekerja dari berbagai lokasi?
                             <!-- Access is limited to the internal network, making it inflexible for teams working from
                             different locations? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-8" data-aos="fade-up" data-aos-duration="800"
+                    <div class="flex flex-col items-center px-6 lg:px-12" data-aos="fade-up" data-aos-duration="800"
                         data-aos-delay="300">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-4.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Implementasi Lama" />
-                        <p class="text-gray-800 font-semibold text-center lg:text-left text-sm sm:text-xl">
+                        <p class="text-gray-800 font-semibold text-left text-sm sm:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
                             <!-- Is the system implementation complex and time-consuming? -->
                         </p>
@@ -261,18 +261,23 @@
                 <div class="relative w-4/5 sm:min-w-1/2 -bottom-20">
                     <img loading="lazy" class="w-full" src="../lib/img/iproc cloud/desktop-illustration.svg"
                         alt="Desktop Illustration" data-aos="fade-up" data-aos-duration="800">
-                    <div class="w-full absolute -left-10 bottom-10 sm:bottom-16 grid grid-cols-2 gap-y-[6%] gap-x-[10%]">
+                    <div
+                        class="w-full absolute -left-10 bottom-10 sm:bottom-16 grid grid-cols-2 gap-y-[6%] gap-x-[10%]">
                         <div class="flex items-start justify-start">
-                            <img class="w-11/12 scale-[0.8] ml-auto shadow-xl rounded-xl" src="../lib/img/iproc cloud/popup-1.svg" alt="Image Popup">
+                            <img class="w-11/12 scale-[0.8] ml-auto shadow-xl rounded-xl"
+                                src="../lib/img/iproc cloud/popup-1.svg" alt="Image Popup">
                         </div>
                         <div class="flex items-start justify-start">
-                            <img class="w-11/12 scale-[1.2] ml-auto shadow-xl rounded-xl" src="../lib/img/iproc cloud/popup-2.svg" alt="Image Popup">
+                            <img class="w-11/12 scale-[1.2] ml-auto shadow-xl rounded-xl"
+                                src="../lib/img/iproc cloud/popup-2.svg" alt="Image Popup">
                         </div>
                         <div class="flex items-start justify-start">
-                            <img class="w-11/12 scale-[1.1] ml-auto shadow-xl rounded-xl" src="../lib/img/iproc cloud/popup-4.svg" alt="Image Popup">
+                            <img class="w-11/12 scale-[1.1] ml-auto shadow-xl rounded-xl"
+                                src="../lib/img/iproc cloud/popup-4.svg" alt="Image Popup">
                         </div>
                         <div class="flex items-start justify-start">
-                            <img class="w-11/12 scale-[1] ml-auto shadow-xl rounded-xl translate-x-10" src="../lib/img/iproc cloud/popup-3.svg" alt="Image Popup">
+                            <img class="w-11/12 scale-[1] ml-auto shadow-xl rounded-xl translate-x-10"
+                                src="../lib/img/iproc cloud/popup-3.svg" alt="Image Popup">
                         </div>
                     </div>
                 </div>
