--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -170,29 +170,28 @@
         </div>
     </nav>
     <main>
-        <section id="home" class="hero pt-22">
-            <div class="max-w-screen-2xl mx-auto px-4 md:px-14!">
-                <div class="relative -bottom-15">
-                    <img class="mb-8 mx-auto w-96 sm:w-72" src="../lib/img/Iproc cloud.svg" alt="iProc Cloud Logo" />
-                    <h1 class="mb-3 text-2xl text-center sm:text-6xl! font-extrabold text-gray-900">
+        <section id="home" class="hero sm:pt-22 h-dvh">
+            <div class="max-w-screen-2xl h-full flex flex-col justify-center sm:justify-around mx-auto px-4 md:px-14!">
+                <div class="relative sm:-bottom-15">
+                    <img class="mb-8 mx-auto w-56 sm:w-92!" src="../lib/img/Iproc cloud.svg" alt="iProc Cloud Logo" />
+                    <h1 class="mb-3 text-4xl text-center sm:text-6xl! font-extrabold text-gray-900">
                         Plug & Play e-Procurement
                     </h1>
-                    <p class="text-gray-600 text-center text-sm sm:text-xl">
+                    <p class="text-gray-600 text-center text-base sm:text-xl">
                         Solusi fleksibel, aman, dan hemat biaya untuk transformasi pengadaan Anda – tanpa infrastruktur
                         tambahan.
                         <!-- Improving procurement efficiency is now easier! iProc Cloud takes e-Procurement to the next
                         level with a flexible, secure, and cost-effective cloud-based system. -->
                     </p>
                 </div>
-                <div class="cloud-content relative -bottom-30 -mx-4 overflow-x-clip overflow-y-visible">
+                <div class="cloud-content mt-20 sm:mt-0 mb-15 -mx-4 overflow-x-clip overflow-y-visible">
                     <img src="../lib/img/iproc cloud/hero-illustration.png" alt="Cloud System Illustration"
                         class="w-11/12 scale-150 sm:scale-150 md:scale-100 mx-auto" data-aos="zoom-in-down"
                         data-aos-duration="800" />
                 </div>
-
             </div>
         </section>
-        <div class="py-20 mt-10 bg-[#24A3F2]"></div>
+        <div class="py-20 -mt-40 bg-[#24A3F2]"></div>
         <section id="problem" class="solve py-24">
             <div class="max-w-screen-2xl mx-auto px-4 md:px-14! text-center">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-8">
@@ -200,8 +199,8 @@
                     e-Procurement, namun...
                     <!-- Your organization has already adopted <br> e-Procurement, but... -->
                 </h2>
-                <div class="grid grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-4 -ml-4 lg:-mr-12 lg:-ml-12">
-                    <div class="flex flex-col items-center px-4 lg:px-12 border-r-2 border-sky-200" data-aos="fade-up"
+                <div class="grid grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-4 -ml-4 md:-mr-12 md:-ml-12">
+                    <div class="flex flex-col items-center px-4 md:px-12 border-r-2 border-sky-200" data-aos="fade-up"
                         data-aos-duration="800">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-1.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Biaya Besar" />
@@ -211,7 +210,7 @@
                             <!-- Still requires significant costs for infrastructure and system maintenance? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-4 lg:px-12 border-r-0 border-sky-200 lg:border-r-2"
+                    <div class="flex flex-col items-center px-4 md:px-12 border-r-0 border-sky-200 lg:border-r-2"
                         data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-2.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Implementasi Rumit" />
@@ -220,7 +219,7 @@
                             <!-- Is the system implementation complicated and time-consuming? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-4 lg:px-12 border-r-2 border-sky-200" data-aos="fade-up"
+                    <div class="flex flex-col items-center px-4 md:px-12 border-r-2 border-sky-200" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="200">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-3.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Akses Terbatas" />
@@ -231,7 +230,7 @@
                             different locations? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-4 lg:px-12" data-aos="fade-up" data-aos-duration="800"
+                    <div class="flex flex-col items-center px-4 md:px-12" data-aos="fade-up" data-aos-duration="800"
                         data-aos-delay="300">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-4.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Implementasi Lama" />
@@ -258,11 +257,11 @@
                         now here with the latest innovation to <br /> take your procurement process to the next level. -->
                     </p>
                 </div>
-                <div class="relative w-4/5 sm:min-w-1/2 -bottom-20">
+                <div class="relative w-4/5 sm:min-w-1/2 -bottom-20 ">
                     <img loading="lazy" class="w-full" src="../lib/img/iproc cloud/desktop-illustration.svg"
                         alt="Desktop Illustration" data-aos="fade-up" data-aos-duration="800">
                     <div
-                        class="w-full absolute -left-10 bottom-10 sm:bottom-16 grid grid-cols-2 gap-y-[6%] gap-x-[10%]">
+                        class="w-full absolute -left-5 sm:-left-10 bottom-10 sm:bottom-16 grid grid-cols-2 gap-y-[6%] gap-x-[10%]">
                         <div class="flex items-start justify-start">
                             <img class="w-11/12 scale-[0.8] ml-auto shadow-xl rounded-xl"
                                 src="../lib/img/iproc cloud/popup-1.svg" alt="Image Popup">
@@ -291,8 +290,8 @@
                     Cloud?
                     <!-- Why iProc Cloud? -->
                 </h2>
-                <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-10! w-full">
-                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
+                <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-10! w-full">
+                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-4 md:p-6" data-aos="fade-up"
                         data-aos-duration="800">
                         <img loading="lazy" src="../lib/img/iproc cloud/solusi-1.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt=" Implementasi Mudah & Cepat" />
@@ -322,7 +321,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
+                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-4 md:p-6" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="100">
                         <img loading="lazy" src="../lib/img/iproc cloud/solusi-2.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt="Biaya Investasi & Operasional Rendah" />
@@ -351,7 +350,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
+                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-4 md:p-6" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="200">
                         <img loading="lazy" src="../lib/img/iproc cloud/solusi-3.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt="Skalabilitas Tinggi" />
@@ -379,7 +378,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-6" data-aos="fade-up"
+                    <div class="flex flex-col items-start bg-white shadow rounded-xl p-4 md:p-6" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="300">
                         <img loading="lazy" src="../lib/img/iproc cloud/solusi-4.svg"
                             class="w-8/12 sm:w-12/12 mb-5 mx-auto" alt="Keamanan Data" />
@@ -407,8 +406,8 @@
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-14 text-center">
                     Fitur Lengkap untuk Mendukung Pengadaan Modern
                 </h2>
-                <div class="flex flex-col md:flex-row">
-                    <div class="flex flex-row md:flex-col! w-full gap-10 order-2 md:order-1">
+                <div class="flex flex-col gap-4 md:gap-0 md:flex-row">
+                    <div class="flex flex-row md:flex-col! w-full gap-4 md:gap-10 order-2 md:order-1">
                         <div class="w-full">
                             <div class="bg-[#48ACE1] rounded-xl p-4 overflow-hidden">
                                 <img loading="lazy" src="../lib/img/iproc cloud/fitur-1.png" data-aos="zoom-in-up"
@@ -487,7 +486,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row md:flex-col! w-full gap-10 order-3">
+                    <div class="flex flex-row md:flex-col! w-full gap-4 md:gap-10 order-3">
                         <div class="w-full">
                             <div class="bg-[#FFBC50] rounded-xl p-4 overflow-hidden">
                                 <img loading="lazy" src="../lib/img/iproc cloud/fitur-3.png" data-aos="zoom-in-up"
