perbandingan grid, padding contact dan footer

--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -530,9 +530,9 @@
                 </h2>
 
                 <div class="w-full">
-                    <div class="grid md:grid-cols-3 gap-6">
+                    <div class="grid grid-cols-12 gap-6">
                         <div
-                            class="bg-white h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
+                            class="bg-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
                                     <h3 class="text-gray-900 text-2xl font-bold text-center mb-5 mt-12">Cloud VMS</h3>
@@ -724,7 +724,7 @@
                             </ul>
                         </div>
                         <div
-                            class="bg-gradient-to-b from-sky-500/25 to-30% to-white h-full shadow rounded-xl p-8 border-3 border-[#005db5]/50 flex flex-col hover:scale-105 transition">
+                            class="bg-gradient-to-b from-sky-500/25 to-30% to-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border-3 border-[#005db5]/50 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col relative">
                                     <span
@@ -906,7 +906,7 @@
                             </ul>
                         </div>
                         <div
-                            class="bg-white h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
+                            class="bg-white  col-span-12 sm:col-start-4 lg:col-start-9 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
                                     <h3 class="text-gray-900 text-2xl font-bold text-center mb-5 mt-12">Private Cloud
@@ -1095,7 +1095,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="bottom px-8 relative overflow-hidden mb-20">
+        <section id="contact" class="bottom px-4 md:px-14 relative overflow-hidden mb-20">
             <div class="max-w-screen-2xl mx-auto text-center p-10 sm:p-15 rounded-4xl">
                 <p
                     class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white leading-tight mb-8 w-full sm:max-w-2/3">
@@ -1115,7 +1115,7 @@
             </div>
         </section>
     </main>
-    <footer class="px-10 pt-20 pb-10 bg-[#005db5] text-white">
+    <footer class="px-4 md:px-14 pt-20 pb-10 bg-[#005db5] text-white">
         <div class="max-w-screen-2xl mx-auto p-2">
             <div class="w-full grid grid-cols-12 gap-5 sm:gap-10!">
                 <div class="col-span-12 sm:col-span-6 lg:col-span-4!">
